--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -46,6 +46,8 @@ metadata:
     chart: {{ template "hdfs-k8s.subchart" . }}
     release: {{ .Release.Name }}
 spec:
+  updateStrategy:
+    type: "RollingUpdate"
   serviceName: {{ template "hdfs-k8s.journalnode.fullname" . }}
   replicas: {{ .Values.global.journalnodeQuorumSize }}
   template:
@@ -91,6 +93,8 @@ spec:
           env:
             - name: HADOOP_CUSTOM_CONF_DIR
               value: /etc/hadoop-custom-conf
+            - name: HADOOP_OPTS
+              value: {{ .Values.hadoopOpts }}
           command: ["/entrypoint.sh"]
           args: ["/opt/hadoop-2.7.2/bin/hdfs", "--config", "/etc/hadoop", "journalnode"]
           ports:
@@ -98,6 +102,8 @@ spec:
             name: jn
           - containerPort: 8480
             name: http
+          - containerPort: 8778
+            name: jolokia
           volumeMounts:
             # Mount a subpath of the volume so that the journal subdir would be
             # a brand new empty dir. This way, we won't get affected by
@@ -111,6 +117,9 @@ spec:
             - name: hdfs-config
               mountPath: /etc/hadoop-custom-conf
               readOnly: true
+            - name: additional-jars
+              mountPath: /jars
+              readOnly: true
            {{- if .Values.global.kerberosEnabled }}
             - name: kerberos-config
               mountPath: /etc/krb5.conf
@@ -120,8 +129,24 @@ spec:
               mountPath: /etc/security/
               readOnly: true
             {{- end }}
-     {{- if .Values.global.kerberosEnabled }}
+        - name: hdfs-journalnode-telegraf
+          image: telegraf:1.10.3-alpine
+          volumeMounts:
+            - name: hdfs-config
+              mountPath: /etc/telegraf
+              readOnly: true
+      # Get us the Jolokia JAR for telegraf monitoring
+      # TODO: Maybe we should extend the docker-image, so it includes jolokia already?
       initContainers:
+        - name: wget-jolokia
+          image: busybox:1.27.1
+          command: ['sh', '-c']
+          args:
+            - wget http://search.maven.org/maven2/org/jolokia/jolokia-jvm/1.6.2/jolokia-jvm-1.6.2-agent.jar -O /jars/jolokia.jar
+          volumeMounts:
+            - name: additional-jars
+              mountPath: /jars
+     {{- if .Values.global.kerberosEnabled }}
         - name: copy-kerberos-keytab
           image: busybox:1.27.1
           command: ['sh', '-c']
@@ -143,6 +168,8 @@ spec:
         - name: hdfs-config
           configMap:
             name: {{ template "hdfs-k8s.config.fullname" . }}
+        - name: additional-jars
+          emptyDir: {}
         {{- if .Values.global.kerberosEnabled }}
         - name: kerberos-config
           configMap:
