--- a/charts/hdfs-k8s/values.yaml
+++ b/charts/hdfs-k8s/values.yaml
@@ -31,6 +31,9 @@ hdfs-config-k8s:
 ## hdfs-journalnode-k8s:
 ## ------------------------------------------------------------------------------
 hdfs-journalnode-k8s:
+
+  hadoopOpts: -javaagent:/jars/jolokia.jar=host=*
+
   persistence:
     ## Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
@@ -69,6 +72,8 @@ hdfs-namenode-k8s:
     echo Write your own script content!
     echo This message will disappear in 10 seconds.
     sleep 10
+
+  hadoopOpts: -javaagent:/jars/jolokia.jar=host=*
 
   persistence:
     ## Persistent Volume Storage Class
@@ -119,6 +124,9 @@ hdfs-simple-namenode-k8s:
 ## hdfs-datanode-k8s:
 ## ------------------------------------------------------------------------------
 hdfs-datanode-k8s:
+
+  hadoopOpts: -javaagent:/jars/jolokia.jar=host=*
+
   ## Node labels and tolerations for pod assignment
   nodeSelector: {}
   tolerations: []
