fix telegraf-config and add different ports (as host networking is sometimes used)

--- a/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
+++ b/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
@@ -141,6 +141,9 @@ spec:
             {{- end }}
         - name: hdfs-datanode-telegraf
           image: telegraf:1.10.3-alpine
+          env:
+            - name: JOLOKIA_PORT
+              value: "{{ .Values.monitoring.jolokiaPort }}"
           volumeMounts:
             - name: hdfs-config
               mountPath: /etc/telegraf
