--- a/charts/hdfs-config-k8s/templates/configmap.yaml
+++ b/charts/hdfs-config-k8s/templates/configmap.yaml
@@ -201,7 +201,7 @@ data:
       database = "k8s"
 
     [[inputs.jolokia2_agent]]
-      urls = ["http://localhost:8778/jolokia"]
+      urls = ["http://localhost:$JOLOKIA_PORT/jolokia"]
 
       [[inputs.jolokia2_agent.metric]]
         name  = "jvm_operating_system"
@@ -240,3 +240,24 @@ data:
         name  = "jvm_class_loading"
         mbean = "java.lang:type=ClassLoading"
         paths = ["LoadedClassCount", "UnloadedClassCount", "TotalLoadedClassCount"]
+
+      # TODO for namenode: metrics beyond jvm_* are currently not show in Jolokia-list. Needs deeper investigation....
+
+      [[inputs.jolokia2_agent.metric]]
+        name = "hdfs_journalnode"
+        mbean = "Hadoop:name=Journal-*,service=JournalNode"
+        tag_keys = ["name"]
+
+      [[inputs.jolokia2_agent.metric]]
+        name = "hdfs_journalnode"
+        mbean = "Hadoop:name=JournalNodeInfo,service=JournalNode"
+
+      [[inputs.jolokia2_agent.metric]]
+        name = "hdfs_datanode"
+        mbean = "Hadoop:name=FSDatasetState*,service=DataNode"
+        tag_keys = ["name"]
+
+      [[inputs.jolokia2_agent.metric]]
+        name = "hdfs_datanode"
+        mbean = "Hadoop:name=DataNodeActivity*,service=DataNode"
+        tag_keys = ["name"]
