--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -134,6 +134,10 @@ spec:
           env:
             - name: JOLOKIA_PORT
               value: "{{ .Values.monitoring.jolokiaPort }}"
+            - name: K8S_NAMESPACE
+              value: "{{ .Release.Namespace }}"
+            - name: APPLICATION
+              value: "{{ template "hdfs-k8s.journalnode.name" . }}"
           volumeMounts:
             - name: hdfs-config
               mountPath: /etc/telegraf
