--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -233,6 +233,10 @@ spec:
           env:
             - name: JOLOKIA_PORT
               value: "{{ .Values.monitoring.jolokiaPort }}"
+            - name: K8S_NAMESPACE
+              value: "{{ .Release.Namespace }}"
+            - name: APPLICATION
+              value: "{{ template "hdfs-k8s.namenode.name" . }}"
           volumeMounts:
             - name: hdfs-config
               mountPath: /etc/telegraf
